// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PersonalInfo component should match snapshot 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    Personal Info
  </h3>
  <div
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    <b>
      Gender: 
    </b>
    <span>
      Non-binary
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    <b>
      Birthday: 
    </b>
    <span>
      January 1, 1969 (50 years old)
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    <b>
      Place of Birth: 
    </b>
    <span>
      New York, USA
    </span>
  </div>
</DocumentFragment>
`;

exports[`PersonalInfo component should match snapshot with other data 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    Personal Info
  </h3>
  <div
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    <b>
      Gender: 
    </b>
    <span>
      Non-binary
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    <b>
      Birthday: 
    </b>
    <span>
      January 1, 1969
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    <b>
      Deathday: 
    </b>
    <span>
      January 1, 2010 (40 years old)
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-1cj4ms"
  >
    <b>
      Place of Birth: 
    </b>
    <span>
      New York, USA
    </span>
  </div>
</DocumentFragment>
`;
